Cleaned up deprecated methods. Fixed jsp errors related to log4j2 migration.